--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const posts = (await getCollection("blog")).sort(
         {
           posts.map((post) => (
             <li>
-              <a href={`/blog/${post.slug}/`}>
+              <a href={`${import.meta.env.BASE_URL}/blog/${post.slug}/`}>
                 <h4 class="title">{post.data.title}</h4>
                 <FormattedDate date={post.data.pubDate} />
               </a>
